[gd_scene load_steps=24 format=3 uid="uid://cy5v82sqoy5m"]

[ext_resource type="Script" path="res://meat_negotiation.gd" id="1_vp3ru"]
[ext_resource type="Texture2D" uid="uid://b2eu74bprp88s" path="res://Deli/IdleAnimations/Flip_1-removebg-preview`.png" id="2_6fqbk"]
[ext_resource type="Texture2D" uid="uid://buc6xn70bvhes" path="res://Deli/IdleAnimations/Flip_2-removebg-preview.png" id="3_jl3p5"]
[ext_resource type="Texture2D" uid="uid://ctu7jejh7iqap" path="res://Deli/IdleAnimations/Flip_3-removebg-preview.png" id="4_6ml5f"]
[ext_resource type="Texture2D" uid="uid://brfamfjqq7gl1" path="res://Deli/IdleAnimations/Flip_4-removebg-preview.png" id="5_1fapa"]
[ext_resource type="Texture2D" uid="uid://bjb72e105onkr" path="res://Deli/IdleAnimations/Horizontal_1-removebg-preview.png" id="6_pfsir"]
[ext_resource type="Texture2D" uid="uid://65fhrunbpgi" path="res://Deli/IdleAnimations/Horizontal_2-removebg-preview.png" id="7_gg6io"]
[ext_resource type="Texture2D" uid="uid://pr0pchhc1h37" path="res://Deli/IdleAnimations/Horizontal_3-removebg-preview.png" id="8_qbdvr"]
[ext_resource type="Texture2D" uid="uid://bwyx40kxvab7j" path="res://Deli/IdleAnimations/Horizontal_4-removebg-preview.png" id="9_dcx6a"]
[ext_resource type="Texture2D" uid="uid://mugk8msbsx5b" path="res://Deli/IdleAnimations/Neutral_1-removebg-preview.png" id="10_e5at2"]
[ext_resource type="Texture2D" uid="uid://lt8w7dlf65wn" path="res://Deli/IdleAnimations/Neutral_2-removebg-preview.png" id="11_qdoq1"]
[ext_resource type="Texture2D" uid="uid://cjc115gtp3cqa" path="res://Deli/IdleAnimations/Neutral_3-removebg-preview.png" id="12_ettyn"]
[ext_resource type="Texture2D" uid="uid://ciy11ki0soxg3" path="res://Deli/IdleAnimations/Neutral_4-removebg-preview.png" id="13_3pd17"]
[ext_resource type="Texture2D" uid="uid://bhdvwwh82ik38" path="res://Deli/IdleAnimations/Vert_1-removebg-preview.png" id="14_2sgvx"]
[ext_resource type="Texture2D" uid="uid://cfl8tucuogb7q" path="res://Deli/IdleAnimations/Vert_2-removebg-preview.png" id="15_8veg2"]
[ext_resource type="Texture2D" uid="uid://dxysjh48i47vc" path="res://Deli/IdleAnimations/Vert_3-removebg-preview.png" id="16_2vibd"]
[ext_resource type="Texture2D" uid="uid://j0aycvw25tw4" path="res://Deli/IdleAnimations/Vert_4-removebg-preview.png" id="17_5wm07"]
[ext_resource type="Texture2D" uid="uid://d1rpybjha41ov" path="res://textbox variants/meat_box.png" id="18_goef3"]
[ext_resource type="Texture2D" uid="uid://ue7a7q2orhe1" path="res://TextBox2.png" id="19_ewb8a"]

[sub_resource type="SpriteFrames" id="SpriteFrames_2qgwm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_6fqbk")
}, {
"duration": 1.0,
"texture": ExtResource("3_jl3p5")
}, {
"duration": 1.0,
"texture": ExtResource("4_6ml5f")
}, {
"duration": 1.0,
"texture": ExtResource("5_1fapa")
}],
"loop": false,
"name": &"flip",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_pfsir")
}, {
"duration": 1.0,
"texture": ExtResource("7_gg6io")
}, {
"duration": 1.0,
"texture": ExtResource("8_qbdvr")
}, {
"duration": 1.0,
"texture": ExtResource("9_dcx6a")
}],
"loop": false,
"name": &"horizontal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_e5at2")
}, {
"duration": 1.0,
"texture": ExtResource("11_qdoq1")
}, {
"duration": 1.0,
"texture": ExtResource("12_ettyn")
}, {
"duration": 1.0,
"texture": ExtResource("13_3pd17")
}],
"loop": false,
"name": &"neutral",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_2sgvx")
}, {
"duration": 1.0,
"texture": ExtResource("15_8veg2")
}, {
"duration": 1.0,
"texture": ExtResource("16_2vibd")
}, {
"duration": 1.0,
"texture": ExtResource("17_5wm07")
}],
"loop": false,
"name": &"vert",
"speed": 5.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5ih60"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ophg2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y3cah"]

[node name="meat_negotiation" type="Node2D"]
script = ExtResource("1_vp3ru")

[node name="background" type="Sprite2D" parent="."]

[node name="meatman(animated)" type="AnimatedSprite2D" parent="."]
position = Vector2(337, 405)
sprite_frames = SubResource("SpriteFrames_2qgwm")
animation = &"flip"

[node name="textbox" type="Sprite2D" parent="."]
position = Vector2(617.94, 242.375)
scale = Vector2(1.5996, 1.2625)
texture = ExtResource("18_goef3")

[node name="theText" type="Label" parent="textbox"]
offset_left = -118.0
offset_top = -68.0
offset_right = 103.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
autowrap_mode = 2

[node name="choice1" type="Button" parent="."]
visible = false
offset_left = 349.0
offset_top = 371.0
offset_right = 580.0
offset_bottom = 490.0
focus_neighbor_left = NodePath(".")
focus_neighbor_right = NodePath("../choice2")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_styles/focus = SubResource("StyleBoxEmpty_5ih60")
text = "Choice 1"
icon = ExtResource("19_ewb8a")
flat = true
icon_alignment = 1
expand_icon = true

[node name="choice2" type="Button" parent="."]
visible = false
offset_left = 741.0
offset_top = 368.0
offset_right = 981.0
offset_bottom = 493.0
focus_neighbor_right = NodePath(".")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_styles/focus = SubResource("StyleBoxEmpty_ophg2")
text = "Erm... it's choice 2 lol"
icon = ExtResource("19_ewb8a")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Timer" type="Timer" parent="."]

[node name="concedeButton" type="Button" parent="."]
visible = false
offset_left = 566.0
offset_top = 523.0
offset_right = 767.0
offset_bottom = 590.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_styles/focus = SubResource("StyleBoxEmpty_y3cah")
text = "Concede"
icon = ExtResource("19_ewb8a")
flat = true
icon_alignment = 1
expand_icon = true

[connection signal="focus_entered" from="choice1" to="." method="_on_choice_1_focus_entered"]
[connection signal="mouse_entered" from="choice1" to="." method="_on_choice_1_mouse_entered"]
[connection signal="mouse_exited" from="choice1" to="." method="_on_choice_1_mouse_exited"]
[connection signal="pressed" from="choice1" to="." method="_on_choice_1_pressed"]
[connection signal="focus_entered" from="choice2" to="." method="_on_choice_2_focus_entered"]
[connection signal="mouse_entered" from="choice2" to="." method="_on_choice_2_mouse_entered"]
[connection signal="mouse_exited" from="choice2" to="." method="_on_choice_2_mouse_exited"]
[connection signal="pressed" from="choice2" to="." method="_on_choice_2_pressed"]
[connection signal="mouse_entered" from="concedeButton" to="." method="_on_concede_button_mouse_entered"]
[connection signal="mouse_exited" from="concedeButton" to="." method="_on_concede_button_mouse_exited"]
[connection signal="pressed" from="concedeButton" to="." method="_on_concede_button_pressed"]
